// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Console Logs Tab Empty State 1`] = `
<div
  className="log-wrapper"
>
  <div
    className="console-general-wrapper"
  >
    <div
      className="List--empty-hero"
    >
      <img
        alt="No logs"
        src="logs_empty_state.png"
      />
      <h3
        className="List--empty-hero-title"
      >
        No logs
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Console Logs Tab Regular Log 1`] = `
<div
  className="log-wrapper"
>
  <div
    className="console-general-wrapper"
  >
    <div
      className="console-view-wrapper"
    >
      <div
        className="console-view"
        id="console-messages"
      >
        <div
          className="console-message-wrapper console-log-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className=""
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :34:10
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:14.017Z"
                >
                  (
                  7/8/2020, 1:18:14 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                Some console log here
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Console Logs Tab Step With Assertion 1`] = `
<div
  className="log-wrapper"
>
  <div
    className="console-general-wrapper"
  >
    <div
      className="console-view-wrapper"
    >
      <div
        className="console-view"
        id="console-messages"
      >
        <div
          className="console-message-wrapper console-error-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className=""
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :67:10
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:15.417Z"
                >
                  (
                  7/8/2020, 1:18:15 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                the word is %s foo
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Console Logs Tab Step With Many Kinds 1`] = `
<div
  className="log-wrapper"
>
  <div
    className="console-general-wrapper"
  >
    <div
      className="console-view-wrapper"
    >
      <div
        className="console-view"
        id="console-messages"
      >
        <div
          className="console-message-wrapper console-error-level has-stack-trace"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className="errorsign"
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :27:9
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:16.007Z"
                >
                  (
                  7/8/2020, 1:18:16 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                Heya error
              </span>
            </span>
          </div>
        </div>
        <div
          className="console-message-wrapper console-warning-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className="warnsign"
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :30:10
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:16.007Z"
                >
                  (
                  7/8/2020, 1:18:16 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                Some warning here
              </span>
            </span>
          </div>
        </div>
        <div
          className="console-message-wrapper console-log-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className=""
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :34:10
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:16.007Z"
                >
                  (
                  7/8/2020, 1:18:16 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                Some console log here
              </span>
            </span>
          </div>
        </div>
        <div
          className="console-message-wrapper console-error-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className=""
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :67:10
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:16.508Z"
                >
                  (
                  7/8/2020, 1:18:16 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                the word is %s foo
              </span>
            </span>
          </div>
        </div>
        <div
          className="console-message-wrapper console-table-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className=""
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :77:8
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:16.508Z"
                >
                  (
                  7/8/2020, 1:18:16 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                JSHandle@array
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Console Logs Tab Step With One Error 1`] = `
<div
  className="log-wrapper"
>
  <div
    className="console-general-wrapper"
  >
    <div
      className="console-view-wrapper"
    >
      <div
        className="console-view"
        id="console-messages"
      >
        <div
          className="console-message-wrapper console-error-level has-stack-trace"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className="errorsign"
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :27:9
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:13.389Z"
                >
                  (
                  7/8/2020, 1:18:13 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                Heya error
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Console Logs Tab Step With Table 1`] = `
<div
  className="log-wrapper"
>
  <div
    className="console-general-wrapper"
  >
    <div
      className="console-view-wrapper"
    >
      <div
        className="console-view"
        id="console-messages"
      >
        <div
          className="console-message-wrapper console-table-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className=""
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :77:8
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:15.741Z"
                >
                  (
                  7/8/2020, 1:18:15 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                JSHandle@array
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Console Logs Tab With Warning 1`] = `
<div
  className="log-wrapper"
>
  <div
    className="console-general-wrapper"
  >
    <div
      className="console-view-wrapper"
    >
      <div
        className="console-view"
        id="console-messages"
      >
        <div
          className="console-message-wrapper console-warning-level"
          onClick={[Function]}
        >
          <div
            className="console-message"
          >
            <span
              className="source-code"
            >
              <i
                className="warnsign"
              />
              <span
                className="console-message-anchor"
              >
                <a
                  className="link"
                  href="http://jsbin.testim.io/tog/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  http://jsbin.testim.io/tog/1
                  :30:10
                </a>
                <span
                  className="console-message-time"
                  title="2020-07-08T10:18:13.720Z"
                >
                  (
                  7/8/2020, 1:18:13 PM
                  )
                </span>
              </span>
              <span
                className="console-message-text"
              >
                Some warning here
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
